tests/compile-fail/integration_suite__integration__anm_features__sprite_script_name_clash.snap
---
source: tests/integration/anm_features.rs
expression: stderr
---
error: ambiguous value for automatic const 'wild'
   ┌─ <input>:9:9
   │
 9 │         wild: {x: 0.0, y: 0.0, w: 512.0, h: 480.0, id: 22 * 2 - 2},
   │         ^^^^ definition with value 42
   ·
17 │ script wild {  // should have ID 1
   │        ---- definition with value 1


